# metaprogramming-acid-test

./: README.md
.github/workflows/: test.yml
cpp/metaprogramming-challenges/: .gitignore  CMakeLists.txt  README.md  flake.nix
cpp/metaprogramming-challenges/examples/: all_examples.cpp  functoid_example.cpp  robust_logging_example.cpp  structured_logging_example.cpp  type_reflection_example.cpp
cpp/metaprogramming-challenges/include/: functoid.hpp  structured_logging.hpp  subtyping.hpp  type_id.hpp
cpp/metaprogramming-challenges/tests/: test_functoid.cpp  test_structured_logging.cpp  test_type_reflection.cpp
haskell/metaprogramming-challenges/: README.md  flake.nix  metaprogramming-challenges.cabal
haskell/metaprogramming-challenges/examples/: AllExamples.hs  FunctoidExample.hs  StructuredLoggingExample.hs  TypeReflectionExample.hs
haskell/metaprogramming-challenges/src/Metaprogramming/: Functoid.hs  StructuredLogging.hs  TypeReflection.hs
haskell/metaprogramming-challenges/test/: Main.hs
haskell/metaprogramming-challenges/test/Test/: Functoid.hs  StructuredLogging.hs  TypeReflection.hs
kotlin/functoid/: .gitignore  README.md  build.gradle.kts  flake.nix  settings.gradle.kts
kotlin/functoid/src/main/kotlin/io/functoid/: Functoid.kt  FunctoidFactory.kt  Id.kt  Provider.kt  TypeTag.kt
kotlin/functoid/src/main/kotlin/io/functoid/examples/: Examples.kt  GenericTypesDemo.kt
kotlin/functoid/src/test/kotlin/io/functoid/: FunctoidAnnotationTest.kt  FunctoidTest.kt  GenericTypesTest.kt
python/: .gitignore
python/structured_logging/: README.md  __init__.py  example.py  logger.py
rust/functoid/: .gitignore  Cargo.toml  README.md  flake.nix
rust/functoid/docs/: SUBTYPING.md
rust/functoid/functoid/: Cargo.toml
rust/functoid/functoid-macro/: Cargo.toml
rust/functoid/functoid-macro/src/: lib.rs
rust/functoid/functoid/examples/: basic_usage.rs  subtyping_problem.rs  subtyping_solution.rs  type_tags_demo.rs
rust/functoid/functoid/src/: lib.rs  subtyping.rs
rust/functoid/functoid/tests/: functoid_tests.rs
rust/structured_logging/: .gitignore  Cargo.toml  README.md  flake.nix
rust/structured_logging/examples/: advanced_usage.rs  basic_usage.rs
rust/structured_logging/src/: lib.rs
swift/metaprogramming-challenges/: .gitignore  Package.swift  README.md  flake.nix
swift/metaprogramming-challenges/Examples/Functoid/: main.swift
swift/metaprogramming-challenges/Examples/StructuredLogging/: main.swift
swift/metaprogramming-challenges/Examples/TypeReflection/: main.swift
swift/metaprogramming-challenges/Sources/MetaprogrammingChallenges/: Functoid.swift  StructuredLogging.swift  TypeReflection.swift
swift/metaprogramming-challenges/Tests/: MetaprogrammingChallengesTests.swift
zig/metaprogramming-challenges/: .gitignore  README.md  build.zig  flake.nix
zig/metaprogramming-challenges/examples/: functoid_example.zig  structured_logging_example.zig  type_reflection_example.zig
zig/metaprogramming-challenges/src/: functoid.zig  main.zig  structured_logging.zig  type_reflection.zig
